--- a/help.html
+++ b/help.html
@@ -26,12 +26,23 @@
     <!-- Contenido principal de la página -->
     <main>
         <h2>Ayuda Clima App v.1.0</h2>
-        <section id="form-city-list">
-            <!-- Sección donde se debe colocar el formulario, con el select y el
-botón de consultar -->
-        </section>
-        <section id="section-weather-result">
-            <!-- Sección donde se debe mostrar el clima de la ciudad -->
+        <p>Esta app te permite consultar el clima de una ciudad en particular utilizando la API de <a href="https://openweathermap.org/api" target="_blank">OpenWeatherMap</a></p>
+        <br>
+        <p>Para poder consultar el clima, primero deberá <a href="add-city.html">Agregar una ciudad</a> y luego seleccionas la Ciudad en cuestión desde la pagina <a href="index.html">Clima</a></p>
+        <section>
+            <form action="ayuda">
+                <label for="name">Nombre:</label>
+                <input type="text">
+                <br>
+                <label for="email">Email:</label>
+                <input type="email">
+                <br>
+                <label for="mensaje">Mensaje:</label>
+                <textarea name="mensaje" id="mesage" cols="30" rows="10"></textarea>
+                <br>
+                <button>Limpiar</button>
+                <input type="submit">
+            </form>
         </section>
     </main>
     <footer>
