--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>
+            <img src="img/icons8-día-parcialmente-nublado-82.png" alt="logo-clima">
             <span>Clima App</span>
         </h1>
         <nav>
@@ -34,7 +35,7 @@
                     <option value="ROSARIO">Rosario</option>
                     <option value="RAFAELA">Rafaela</option>
                 </select>
-                <input type="submit" value="Consultar">
+                <input type="submit" value="Consultar" name="submit" id="submit">
             </form>
         </section>
         <section id="section-weather-result">
