--- a/add-city.html
+++ b/add-city.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <h1>
+            <img src="img/icons8-día-parcialmente-nublado-82.png" alt="logo-clima">
             <span>Clima App</span>
         </h1>
         <nav>
