Correcciones de clases generales clase de 7-06-2022

--- a/add-city.html
+++ b/add-city.html
@@ -36,9 +36,9 @@
             </form>
         </section>
         <section id="section-weather-result">
-            <p id="verde">Ciudad agregada con ésxito</p>
-            <p id="rojo">Error: la ciudad consultada no se encuentra con la API o se produjo un error al consultar</p>
-            <p id="amarillo">La ciudad ingresada ya se encuentra almacenada</p>
+            <p class="mensaje gren">Ciudad agregada con ésxito</p>
+            <p class="mensaje red">Error: la ciudad consultada no se encuentra con la API o se produjo un error al consultar</p>
+            <p class="mensaje yellow">La ciudad ingresada ya se encuentra almacenada</p>
         </section>
     </main>
     <footer>
