verificación de email con cartel y boton de limpiar form, TP terminado

--- a/add-city.html
+++ b/add-city.html
@@ -45,7 +45,7 @@
     </main>
     <footer>
         <p>
-            Desarrollado con ♥ - LC2
+            Desarrollado por Santiago Caso con ♥ - LC2
         </p>
     </footer>
 </body>
