--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <section id="section-weather-result">
             <!-- Sección donde se debe mostrar el clima de la ciudad -->
-            <div class="item">
+            <div class="item" style="display: none;" id="div-carga">
                 <i class="loader --1"></i>
             </div>
             <div class="card" style="display: none;" id="carta-clima">
@@ -58,7 +58,7 @@
     </main>
     <footer>
         <p>
-            Desarrollado con ♥ - LC2
+            Desarrollado por Santiago Caso con ♥ - LC2
         </p>
     </footer>
 </body>
