Correccion N°1 del TP: -Arreglar diferencias entre mayusculas y minusculas (también sin espacios)

--- a/add-city.html
+++ b/add-city.html
@@ -35,7 +35,7 @@
                 <label for="add-city">Ingrese la ciudad a agregar:</label>
                 <input type="text" id="add-city" name="agregar.ciudad">
             </form>
-            <button type="submit" name="AGREGAR" value="Agregar" id ="add-city-submit" onclick="agregarNombreCiudad(newCity); addNewCityToLocalStorage(newCity);">Agregar</button>
+            <button type="submit" name="AGREGAR" value="Agregar" id ="add-city-submit" onclick="addNewCityToLocalStorage();">Agregar</button>
         </section>
         <section id="section-weather-result">
             <p class="mensaje green" style="display: none;">Ciudad agregada con éxito</p>
