Verificar si la ciudad existe en la API al momento de agrgar una nueva ciudad

--- a/add-city.html
+++ b/add-city.html
@@ -29,7 +29,7 @@
     </header>
     <!-- Contenido principal de la página -->
     <main>
-        <h2>Agreguar Ciudad</h2>
+        <h2>Agregar Ciudad</h2>
         <section>
             <form action="add-city" id="form-add-city">
                 <label for="add-city">Ingrese la ciudad a agregar:</label>
