--- a/help.html
+++ b/help.html
@@ -51,7 +51,7 @@
 
         </section>
         <div id="none-valid-container">
-            <p id="none-valid" style="display: none;">Ingrese un email válido</p>
+            <p id="none-valid" style="display: none;" class="mensaje red">Ingrese un email válido</p>
         </div>
         <p id="cartel "style="display: none;">cartel </p>
     </main>
