Remplazo de onclicks por addEventsListener (manejo de buttons desde archivo JS

--- a/help.html
+++ b/help.html
@@ -46,7 +46,7 @@
             <div id="butons">
                 <input type="submit" id="submit" name="Enviar" onclick="validMail(inputEmail.value)">
                 <!-- <input type="reset" id="clear" name="Limpiar" alt="Limpiar"> -->
-                <button id="clear" onclick="limpiarForm()">Limpiar</button>
+                <button id="clear">Limpiar</button>
             </div>
 
         </section>
