--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <section id="form-city-list">
             <!-- Sección donde se debe colocar el formulario, con el select y el botón de consultar -->
             <form action="select-city">
-                <select name="city-list" id="city-list" onclick="showAlert()">
+                <select name="city-list" id="city-list">
                     <option value="" disabled selected>Seleccionar Ciudad</option>
                 </select>
             </form>
-            <input type="submit" value="Consultar" name="submit" id="submit" onclick="fetchAPI()">
+            <input type="submit" value="Consultar" name="submit" id="submit">
         </section>
         <section id="section-weather-result">
             <!-- Sección donde se debe mostrar el clima de la ciudad -->
