--- a/add-city.html
+++ b/add-city.html
@@ -35,7 +35,7 @@
                 <label for="add-city">Ingrese la ciudad a agregar:</label>
                 <input type="text" id="add-city" name="agregar.ciudad">
             </form>
-            <button type="submit" name="AGREGAR" value="Agregar" id ="add-city-submit" onclick="addNewCityToLocalStorage();">Agregar</button>
+            <button type="submit" name="AGREGAR" value="Agregar" id ="add-city-submit">Agregar</button>
         </section>
         <section id="section-weather-result">
             <div class="item" style="display: none;" id="div-carga">
